Minor fixes to non-visible control selection to deal with scrolling.

--- a/WebContent/applications/demo/1/rapid.css
+++ b/WebContent/applications/demo/1/rapid.css
@@ -70,40 +70,6 @@ table.grid {
 	z-index: 10009;
 }
 
-/* Slide panel control resource styles */
-
-.slidePanel {
-	position: absolute;
-	padding: 5px;
-	width: 20px;
-	height: 20px;
-	z-index: 101;
-}
-
-.slidePanel img {
-	width: 100%;
-	height: 100%;
-}
-
-.slidePanelPane {
-	position: absolute;
-	float: left;
-	width: 200px;
-	height: 100%;
-	background-color: white;
-	border-right: 1px solid black;
-	z-index: 100;
-}
-
-.slidePanelCover {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #ccc;
-	opacity: 0.75;
-	z-index: 99;
-}
-
 /* Tabs control resource styles */
 
 ul.tabsHeader {
@@ -167,6 +133,11 @@ Styles saved here will be applied to all pages in the application
 
 body {
   padding : 10px;
+  font-family : 'Lucida Grande', Verdana, Arial, Helvetica, sans-serif;
+  font-size : 13px;
+}
+
+table {
   font-family : 'Lucida Grande', Verdana, Arial, Helvetica, sans-serif;
   font-size : 13px;
 }
