--- a/WebContent/applications/mobdemo/1/rapid.css
+++ b/WebContent/applications/mobdemo/1/rapid.css
@@ -170,6 +170,11 @@ body {
   font-size : 18px;
 }	
 
+table {
+  font-family : 'Lucida Grande', Verdana, Arial, Helvetica, sans-serif;
+  font-size : 18px;
+}
+
 input {
 	font-size: 18px;
 	padding: 8px;
